--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -6,23 +6,24 @@ spring:
 server:
   port: 8001
 spring:
-  profiles: dev
-  application:
-    name: microservicecloud-config-dept-client
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.gjt.mysql.Driver
-    url: jdbc:mysql://localhost:3306/clouddb01
+   profiles: dev
+   application:
+    name: microservicecloud-config-eureka-client
+   datasource:
+    type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
+    driver-class-name: com.mysql.jdbc.Driver              # mysql驱动包
+    url: jdbc:mysql://localhost:3306/clouddb01?useUnicode=true&characterEncoding=utf8             # 数据库名称
     username: root
     password: 123456
     dbcp2:
-      min-idle: 5
-      initial-size: 5
-      max-total: 5
-      max-wait-millis: 200
+      min-idle: 5                                           # 数据库连接池的最小维持连接数
+      initial-size: 5                                       # 初始化连接数
+      max-total: 5                                          # 最大连接数
+      max-wait-millis: 200                                  # 等待连接获取的最大超时时间
+
 mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
-  type-aliases-package: com.gaosheng.springcloud.entity    # 所有Entity别名类所在包
+  config-location: classpath:mybatis/mybatis.cfg.xml        
+  type-aliases-package: com.gaosheng.springcloud.entity    
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml
   
@@ -34,23 +35,24 @@ eureka:
 server:
   port: 8001
 spring:
-  profiles: test
-  application:
-    name: microservicecloud-config-dept-client
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.gjt.mysql.Driver
-    url: jdbc:mysql://localhost:3306/clouddb02
+   profiles:test
+   application:
+    name: microservicecloud-config-eureka-client 
+   datasource:
+    type: com.alibaba.druid.pool.DruidDataSource           
+    driver-class-name: com.mysql.jdbc.Driver              
+    url: jdbc:mysql://localhost:3306/clouddb02?useUnicode=true&characterEncoding=utf8            
     username: root
     password: 123456
     dbcp2:
-      min-idle: 5
-      initial-size: 5
-      max-total: 5
-      max-wait-millis: 200
+      min-idle: 5                                          
+      initial-size: 5                                       
+      max-total: 5                                         
+      max-wait-millis: 200                                 
+
 mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
-  type-aliases-package: com.gaosheng.springcloud.entity    # 所有Entity别名类所在包
+  config-location: classpath:mybatis/mybatis.cfg.xml       
+  type-aliases-package: com.gaosheng.springcloud.entity   
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml
   
