--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -1,62 +1,81 @@
-spring:
+
+spring: 
   profiles:
     active:
     - dev
+--- 
+server:
+  port: 8001
+spring: 
+   profiles: dev
+   application: 
+    name: microservicecloud-config-dept-client
+   datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: org.gjt.mm.mysql.Driver
+    url: jdbc:mysql://localhost:3306/clouddb01
+    username: root
+    password: 123456
+    dbcp2:
+      min-idle: 5
+      initial-size: 5
+      max-total: 5
+      max-wait-millis: 200 
+mybatis:
+  config-location: classpath:mybatis/mybatis.cfg.xml
+  type-aliases-package: com.gaosheng.springcloud.entity
+  mapper-locations:
+  - classpath:mybatis/mapper/**/*.xml
+ 
+eureka: 
+  client: #å®¢æˆ·ç«¯æ³¨å†Œè¿›eurekaæœåŠ¡åˆ—è¡¨å†…
+    service-url: 
+      defaultZone: http://eureka7001.com:7001/eureka
+  instance:
+    instance-id: dept-8001.com
+    prefer-ip-address: true
+ 
+info:
+  app.name: atguigu-microservicecloud-springcloudconfig03-java1129
+  company.name: www.atguigu.com
+  build.artifactId: $project.artifactId$
+  build.version: $project.version$
 ---
 server:
   port: 8001
-spring:
-   profiles: dev
-   application:
-    name: microservicecloud-config-eureka-client
+spring: 
+   profiles: test
+   application: 
+    name: microservicecloud-config-dept-client
    datasource:
-    type: com.alibaba.druid.pool.DruidDataSource            # µ±Ç°Êı¾İÔ´²Ù×÷ÀàĞÍ
-    driver-class-name: com.mysql.jdbc.Driver              # mysqlÇı¶¯°ü
-    url: jdbc:mysql://localhost:3306/clouddb01?useUnicode=true&characterEncoding=utf8             # Êı¾İ¿âÃû³Æ
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: org.gjt.mm.mysql.Driver
+    url: jdbc:mysql://localhost:3306/clouddb02
     username: root
     password: 123456
     dbcp2:
-      min-idle: 5                                           # Êı¾İ¿âÁ¬½Ó³ØµÄ×îĞ¡Î¬³ÖÁ¬½ÓÊı
-      initial-size: 5                                       # ³õÊ¼»¯Á¬½ÓÊı
-      max-total: 5                                          # ×î´óÁ¬½ÓÊı
-      max-wait-millis: 200                                  # µÈ´ıÁ¬½Ó»ñÈ¡µÄ×î´ó³¬Ê±Ê±¼ä
-
+      min-idle: 5
+      initial-size: 5
+      max-total: 5
+      max-wait-millis: 200  
+  
+  
 mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml        
-  type-aliases-package: com.gaosheng.springcloud.entity    
+  config-location: classpath:mybatis/mybatis.cfg.xml
+  type-aliases-package: com.gaosheng.springcloud.entity
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml
-  
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:eureka7001.com:7001/eureka
----                     
-server:
-  port: 8001
-spring:
-   profiles:test
-   application:
-    name: microservicecloud-config-eureka-client 
-   datasource:
-    type: com.alibaba.druid.pool.DruidDataSource           
-    driver-class-name: com.mysql.jdbc.Driver              
-    url: jdbc:mysql://localhost:3306/clouddb02?useUnicode=true&characterEncoding=utf8            
-    username: root
-    password: 123456
-    dbcp2:
-      min-idle: 5                                          
-      initial-size: 5                                       
-      max-total: 5                                         
-      max-wait-millis: 200                                 
-
-mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml       
-  type-aliases-package: com.gaosheng.springcloud.entity   
-  mapper-locations:
-  - classpath:mybatis/mapper/**/*.xml
-  
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:eureka7001.com:7001/eureka   
+ 
+eureka: 
+  client: #å®¢æˆ·ç«¯æ³¨å†Œè¿›eurekaæœåŠ¡åˆ—è¡¨å†…
+    service-url: 
+      defaultZone: http://eureka7001.com:7001/eureka
+  instance:
+    instance-id: dept-8001.com
+    prefer-ip-address: true
+ 
+info:
+  app.name: atguigu-microservicecloud-springcloudconfig02
+  company.name: www.atguigu.com
+  build.artifactId: $project.artifactId$
+  build.version: $project.version$
